tests/specs/enum_declaration.txt
# mod.ts
export enum Enum {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export enum Enum {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

enum Enum



# output.json
[
  {
    "name": "Enum",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "enum",
        "def": {
          "members": []
        }
      }
    ]
  }
]
